Refactor project structure and update dependencies for HireTrack landing page
- Removed obsolete files including index.html, eslint.config.js, and various TypeScript configuration files.
- Updated .gitignore to include new directories and files relevant to Next.js and production builds.
- Changed package.json and package-lock.json to reflect the new project name and updated dependencies for Next.js.
- Adjusted Tailwind CSS configuration to align with the new project structure.
- Enhanced README with installation instructions and project features.
- Replaced routing and navigation components to support Next.js framework.
- Updated various components to utilize Next.js Link for navigation and improved user experience.

--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,20 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "outputDirectory": ".next",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "vite",
+  "framework": "nextjs",
   "rewrites": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/root-installer-readme",
+      "destination": "/root-based-installation"
+    },
+    {
+      "source": "/user-based-installer-readme",
+      "destination": "/user-based-installation"
     }
   ],
   "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
     {
       "source": "/hiretrack-installer",
       "headers": [
@@ -34,6 +29,10 @@
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
